# ICF

./: .gitignore  README.md  main.py  pyproject.toml
data/lider/: POT_XIII_RM_SURPONIENTE_UN730_NORMAL_2025_A1_1.xlsx  POT_XIII_RM_SURPONIENTE_UN730_NORMAL_2026_A1_2.xlsx
data/tasacop/: PO_XIII_RM_SURPONIENTE_UN790_NORMAL_2029_3_A5__3.xlsx  PO_XIII_RM_SURPONIENTE_UN790_NORMAL_2029_A1_3.xlsx
data/tasacop/Junio26/: expediciones_tasacop_junio26.xlsx
data/tasacop/Mayo26/: expediciones_tasacop_mayo26.xlsx
nbs/: ICF.ipynb  ICF_2.ipynb  ICF_3.ipynb  revision1.xlsx
salidas/lider-Abril26/: reporte.xlsx
salidas/lider-Abril26/reporte_servicio_sentido/: R730V_I.xlsx  R730V_R.xlsx  R730_I.xlsx  R730_R.xlsx
salidas/lider-Junio26/: reporte.xlsx
salidas/lider-Junio26/reporte_servicio_sentido/: R730V_I.xlsx  R730V_R.xlsx  R730_I.xlsx  R730_R.xlsx
salidas/lider-Marzo26/: reporte.xlsx
salidas/lider-Marzo26/reporte_servicio_sentido/: R730V_I.xlsx  R730V_R.xlsx  R730_I.xlsx  R730_R.xlsx
salidas/lider-Mayo26/: reporte.xlsx
salidas/lider-Mayo26/reporte_servicio_sentido/: R730V_I.xlsx  R730V_R.xlsx  R730_I.xlsx  R730_R.xlsx
salidas/toptur-Abril26/: reporte.xlsx
salidas/toptur-Abril26/reporte_servicio_sentido/: 701_I.xlsx  701_R.xlsx  702_I.xlsx  702_R.xlsx  703_I.xlsx  703_R.xlsx  704_I.xlsx  704_R.xlsx  705_I.xlsx  705_R.xlsx  706_I.xlsx  706_R.xlsx
salidas/toptur-Junio26/: reporte.xlsx
salidas/toptur-Junio26/reporte_servicio_sentido/: 701_I.xlsx  701_R.xlsx  (+10 more)
salidas/toptur-Mayo26/: reporte.xlsx
src/: descubrir.py
src/indicadores/: icf.py  io_icf.py
(+12 files in other folders)
