[project]
name = "top-tur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "holidays>=0.99",
    "ipykernel>=7.3.0",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "xlrd>=2.0.2",
]
